<resources>
    <string name="app_name">kwongMMMedley</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kyle Wong</string>
    <string name="nav_header_subtitle">kyle_wong@ucsb.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fireworks">Fireworks</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_imagescaling">Image Scaling</string>
    <string name="menu_videoplayback">Video Playback</string>
    <string name="demo">Pick a demo from the top-left menu!</string>
    <string name="menu_texttospeech">Text To Speech</string>
    <string name="type_something_you_want_me_to_say">Type something you want me to say!</string>
    <string name="menu_speechtotext">Speech to Text</string>
    <string name="press_the_fab_to_speak">Press the FAB to speak</string>
</resources>